# cmake

./: .gitignore  README.md  _sidebar.md  index.html
note/: 01-g++.md  01-gcc.md  02-compile.md  03-dbg.md  04-debug.md  05-cmake.md  06-cmake-cmpile-step.md  06-cmake-compile-step.md  06-cmake-compile.md  07-cmake-compile.md  08-vscode-debug.md
src/: 2  a.out  inefficency.cpp  test  test.cpp
src/01_basic/: with_o.out  without_o.out
src/02_swap/: main.cpp
src/03_debug/: sum.cpp
src/07_cmake/helloworld/: CMakeLists.txt  helloworld.cpp
src/07_cmake/project/: CMakeLists.txt
src/07_cmake/project/include/: swap.h
src/08_demo/: CMakeLists.txt  main.cpp
src/08_demo/include/: Gun.h  Solider.h
src/08_demo/src/: Gun.cpp  Solider.cpp
src/gcc_02_test/: test.cpp
src/gcc_dbg/: .sum.cpp.swp  a_no_g  a_yes_g
src/gcc_demo_swap/: dyna_main  main.cpp  static_main
src/gcc_demo_swap/src/: swap.cpp
